--- a/Simple/site/index.html
+++ b/Simple/site/index.html
@@ -7,14 +7,33 @@
 </head>
 <body>
 <h1>Oekaki Node.js</h1>
-<canvas id="paintCanvas" width="800" height="600"></canvas>
-<div>
-  <button id="clearBtn">Effacer</button>
+
+<div id="canvas-container">
+  <canvas id="bgCanvas" width="800" height="600"></canvas>
+  <canvas id="fgCanvas" width="800" height="600"></canvas>
+</div>
+
+<div class="toolbar">
+  <button id="penTool">✏️ Stylo</button>
+  <button id="eraserTool">🧽 Gomme</button>
+  <button id="fillTool">🪣 Remplir</button>
+
+  <button id="bgLayer">BG</button>
+  <button id="fgLayer">FG</button>
+
   <input type="color" id="colorPicker" value="#000000">
   <input type="range" id="brushSize" min="1" max="50" value="5">
-  <button id="saveBtn">Sauvegarder</button>
+
+  <button id="undoBtn">↩ Undo</button>
+  <button id="redoBtn">↪ Redo</button>
+  <button id="saveBtn">💾 Sauvegarder</button>
+</div>
+
+<div>
   <a href="gallery.html">Voir la galerie</a>
 </div>
 <script src="script.js"></script>
 </body>
 </html>
+
+
